--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happy planet club</title>
 
@@ -21,7 +21,7 @@
       }
 
       #loading-app img {
-        max-width: 300px;
+        max-width: 250px;
       }
     </style>
   </head>
