--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Happy planet club</title>
+    <title>Happy Planet Club</title>
 
     <style>
       #loading-app {
@@ -28,7 +28,11 @@
   <body>
     <div id="app"></div>
     <div id="loading-app">
-      <img src="/logo.png" alt="" />
+      <picture>
+        <source srcset="/logo.webp" type="image/webp" />
+        <source srcset="/logo.png" type="image/png" />
+        <img src="/logo.png" />
+      </picture>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
